--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:textAlignment="center"
     android:background="?attr/background_color"
-    >
+    android:orientation="vertical"
+    android:textAlignment="center">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/appbar_settings"
@@ -27,7 +26,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/language_settings"
@@ -73,6 +72,7 @@
                     android:layout_gravity="center"
                     android:gravity="end"
                     android:text="@string/settings_language_action"
+                    android:textColor="?android:attr/textColorHint"
                     android:textSize="@dimen/settings_action_size" />
 
             </LinearLayout>
