--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
 
     <color name="ripple_button">#17000000</color>
     <color name="divider_light">#EFEFEF</color>
-    <color name="divider_dark">#EFEFEF</color>
+    <color name="divider_dark">#757575</color>
+    <color name="hint_light">#A6A6A6</color>
+    <color name="hint_dark">#DFDFDF</color>
 </resources>
