--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="settings_title_size">20sp</dimen>
     <dimen name="settings_subtitle_size">16sp</dimen>
     <dimen name="settings_action_size">16sp</dimen>
+
+    <dimen name="vault_login_dot_margin">5dp</dimen>
 </resources>
