--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,6 +11,8 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/hint_light</item>
+
         <item name="android:popupBackground">@color/white</item>
         <item name="android:itemBackground">@color/white</item>
 
@@ -29,6 +31,8 @@
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/hint_dark</item>
+
         <item name="android:popupBackground">@color/grey</item>
         <item name="android:itemBackground">@color/grey</item>
 
