AllImages hien anh (chua ra anh)

--- a/app/src/main/res/layout/fragment_all_images.xml
+++ b/app/src/main/res/layout/fragment_all_images.xml
@@ -5,14 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.AllImagesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="1"
-        android:textSize="60sp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_gallery_images"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </FrameLayout>
