--- a/app/src/main/res/layout/thumbnail_item.xml
+++ b/app/src/main/res/layout/thumbnail_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.example.higallery.SquareImageView
+    <com.team2.higallery.widgets.SquareImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
