Xem ảnh kích thước lớn, vuốt trái phải để xem hai ảnh bên, có zoom

--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -7,8 +7,8 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.PhotoActivity">
 
-    <ImageView
-        android:id="@+id/imageDummy"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="?attr/background_color"
