--- a/app/src/main/res/layout/thumbnail_item.xml
+++ b/app/src/main/res/layout/thumbnail_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/image_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <com.team2.higallery.widgets.SquareImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
-        android:scaleType="centerCrop"
+        android:padding="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
