--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="settings_action_size">16sp</dimen>
 
     <dimen name="vault_login_dot_margin">5dp</dimen>
+
+    <dimen name="photo_details_title_size">18sp</dimen>
+    <dimen name="photo_details_content_size">16sp</dimen>
+    <dimen name="photo_details_vert_margin">8dp</dimen>
 </resources>
