--- a/app/src/main/res/layout/activity_vault_album.xml
+++ b/app/src/main/res/layout/activity_vault_album.xml
@@ -1,70 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.VaultAlbumActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/appbar_vault"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_height="wrap_content"
+        android:background="?attr/primary_color"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/AppBarTheme"
+        app:layout_constraintBottom_toTopOf="@+id/body_vault"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu_vault"
+        app:title="@string/vault_title"
+        app:titleTextColor="?attr/on_primary_color" />
 
-        <Button
-            android:id="@+id/btnSelectImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select Image"/>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/body_vault"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?attr/background_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar_vault"
+        app:menu="@menu/bottom_navigation_main" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
-            <Button
-                android:id="@+id/btnEncrypt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Encrypto" />
-
-            <Button
-                android:id="@+id/btnDecrypt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Decrypto"
-                android:layout_marginLeft="20dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
-            <Button
-                android:id="@+id/btnEncryptAndSaveFile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="En And Save" />
-
-            <Button
-                android:id="@+id/btnDecryptAndOpenFile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="De And Open"
-                android:layout_marginLeft="20dp"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvStringOfImage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/black"/>
-
-        <ImageView
-            android:id="@+id/ivImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".activities.VaultAlbumActivity">-->
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:orientation="vertical"-->
+<!--        android:gravity="center_horizontal">-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btnSelectImage"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Select Image"/>-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:gravity="center_horizontal">-->
+<!--            <Button-->
+<!--                android:id="@+id/btnEncrypt"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Encrypto" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btnDecrypt"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Decrypto"-->
+<!--                android:layout_marginLeft="20dp"/>-->
+<!--        </LinearLayout>-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:gravity="center_horizontal">-->
+<!--            <Button-->
+<!--                android:id="@+id/btnEncryptAndSaveFile"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="En And Save" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btnDecryptAndOpenFile"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="De And Open"-->
+<!--                android:layout_marginLeft="20dp"/>-->
+<!--        </LinearLayout>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/tvStringOfImage"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textColor="@color/black"/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/ivImageView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--    </LinearLayout>-->
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
