Fix giao diện EditActivity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="photo_details_vert_margin">8dp</dimen>
 
     <dimen name="trash_text_button_size">16sp</dimen>
+
+    <dimen name="edit_rotate_degree_text_size">30sp</dimen>
 </resources>
