--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -48,4 +48,10 @@
     <style name="AppBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">?attr/on_primary_color</item>
     </style>
+
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorAccent">#f3f3f3</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textColorPrimary">#000000</item>
+    </style>
 </resources>
